# behavior_stream_api

./: .env.example  .gitignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yaml
activities/journaling/: models.py  serializers.py  views.py
activities/migrations/: 0001_initial.py
backend/: .env.example  LICENSE  README.md  backend.Dockerfile  pyproject.toml  pytest.ini
backend/activities/: __init__.py  admin.py  models.py
backend/activities/journaling/: models.py  views.py
backend/activities/journaling/tests/: test_models.py  test_serializers.py  test_views.py
backend/activities/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/core/: admin.py  serializers.py
backend/core/migrations/: 0001_initial.py
backend/core/models/: activity_base.py  allowed_activity.py  relationship.py  user.py
backend/core/tests/factories/: __init__.py  relationship_factory.py  user_factory.py
backend/core/tests/models/: test_models_relationship.py  test_models_user.py
backend/core/tests/serializers/: test_user_serializer.py
backend/core/tests/views/: test_allowed_activity_actions.py  test_views_allowed_activity.py  test_views_user.py
backend/core/views/: allowed_activity.py  user.py
config/: settings.py  urls.py
core/: admin.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_allowedactivity.py
core/models/: __init__.py  activity_base.py  allowed_activity.py  relationship.py  user.py
core/tests/: test_models_relationship.py  test_models_user.py
core/tests/models/: test_models_user.py  (+2 more)
core/views/: allowed_activity.py  relationship.py  user.py
frontend/: .env.development  README.md  app.json  frontend.Dockerfile  frontend.Dockerfile_create_a_flutter_machine  frontend.Dockerfile_create_a_linux_machine  package-lock.json  package.json  pubspec.yaml  vite.config.ts
frontend/app/: _layout.tsx  create.tsx  editClient.tsx  index.tsx  login.tsx  register.tsx
frontend/components/: ActivityCard.tsx  AddPatientModal.tsx  Button.tsx  Card.tsx  DatePickerField.tsx  EmptyState.tsx  FormField.tsx  LoadingSpinner.tsx  PatientCard.tsx  SearchPatientModal.tsx  SectionHeader.tsx  StatsCard.tsx
frontend/lib/: main.dart
frontend/linux/: CMakeLists.txt
frontend/models/: journaling.ts  relatioship.ts  roleChoices.ts  user.ts
frontend/public/: index.html
frontend/services/: allowedActivities.ts  analyses.ts  auth.ts  clients.ts  journaling.ts  relationships.ts  users.ts
frontend/src/: App.css  App.tsx  index.css
frontend/test/: widget_test.dart
frontend/utils/: api.ts  secureStore.ts  theme.ts
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
nginx/: default.conf
(+33 files in other folders)
